--- a/bergen/bergen.css
+++ b/bergen/bergen.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-image: url("bryggen.jpg");
+  background-image: url("images/bryggen.jpg");
   background-size: cover;
   border-radius: 15px;
 }
@@ -54,14 +54,16 @@ h5 {
 }
 .header {
   display: flex;
-  
+  justify-content: center;
+  align-items:center;
+
 }
 .ping {
   width: 150px;
 }
 
 .card {
-  width: 400px;
+  width: 200px;
   margin: 0px auto;
   padding: 20px;
   display: flex;
@@ -70,4 +72,5 @@ h5 {
   background: #ddebf8;
   color: #2b2839;
   border-bottom: 6px solid #023047;
+  border-radius: 20px
 }
